Bug 1438538 - Fix SourceListener::CapturingAudio logic. r=johannh

MozReview-Commit-ID: 9K0kOatj1CQ